added intro to Requirement Traceability Sections  #11

--- a/DD/Files/traceability.tex
+++ b/DD/Files/traceability.tex
@@ -1,7 +1,10 @@
  
  %Requirement Traceability description
+ The purpose of this design project is to build up a system able to fulfil all requirements proposed in the bounded RASD document. 
  
+ In the following section, it is reported the list of project's goals, and for each of them is given the set of components involved in related operations.
  
+ \vspace{1cm}
  
  %Requiremnt Traceability list
  \begin{itemize}
@@ -26,6 +29,8 @@
  		\item Web Application
  		\item Mobile Application
  	\end{itemize}
+ \vspace{0.5cm}
+ 
  	\item[G2] - Provide a route to the user for reaching the appointments
  	\subitem[G2.1] The user must reach on time his/her appointments
  	\begin{itemize}[leftmargin=1in]
@@ -82,6 +87,8 @@
  		\item CalendarManager
  		\item Database
  	\end{itemize}
+ \vspace{0.5cm}
+ 
  	\item[G3] Allow the user to sign up into the application
  	\subitem[G3.1] The registration must allow the univocal recognition of the user
  	\begin{itemize}[leftmargin=1in]
@@ -90,6 +97,8 @@
  		\item SessionManager
  		\item Database
  	\end{itemize}
+ \vspace{0.5cm}
+ 
  	\item[G4] Allow the user to log in
  	\subitem[G4.1] The system allow the login through e-mail and password
  	\begin{itemize}[leftmargin=1in]
@@ -105,6 +114,8 @@
  		\item SessionManager
  		\item Database
  	\end{itemize}
+ \vspace{0.5cm}
+ 
  	\item[G5] Allow the user to add his own preferences
  	\subitem[G5.1] The user must be logged
  	\begin{itemize}[leftmargin=1in]
@@ -183,6 +194,8 @@
  		\item PreferenceManager
  		\item Database
  	\end{itemize}
+ \vspace{0.5cm}
+ 
  	\item[G6] Allow the user to manage his account
  	\subitem[G6.1] The user must be able to remove appointments and routes
  	\begin{itemize}[leftmargin=1in]
@@ -208,6 +221,8 @@
  		\item SessionManager
  		\item Database
  	\end{itemize}
+ \vspace{0.5cm}
+ 
  	\item[G7] Allow the user to report events and disservices 
  	\subitem[G7.1] The user can report strikes using the application
  	\begin{itemize}[leftmargin=1in]
