Implementation Integration and Test plan section updated #12 second part

--- a/DD/Files/effort.tex
+++ b/DD/Files/effort.tex
@@ -16,31 +16,19 @@
 
 	\hline 
 
-	&  \\ 
+24/11/2017	& 1h \\ 
 
 	\hline 
 
-	&  \\ 
+25/11/2017	& 3h \\ 
 
 	\hline 
 
-	&  \\ 
+26/11/2017	& 7h \\ 
 
 	\hline 
 
-	&  \\ 
-
-	\hline 
-
-	&  \\ 
-
-	\hline 
-
-	&  \\ 
-
-	\hline 
-
-\textbf{Total}	&  \\ 
+\textbf{Total}	& 16h30m \\ 
 
 	\hline 
 
