Introduction Definitions, Acronyms, Abbreviations fixes

--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -27,15 +27,29 @@ The system will offer his services to user through a Web GUI and a mobile applic
 
 \subsection{Definitions, Acronyms, Abbreviations}
 
+
 \begin{itemize}
-	\item \textsl{RASD} \textbf{R}equirement \textbf{A}nalysis and \textbf{S}oftware \textbf{S}pecification
+	
+	
+	
+	\item Appointment: location the user has to reach at a fixed date and time
+	\item Route: journey between two appointments, it is composed by a series of paths
+	\item Path: part of a route traversed with a specific mean of transport
+\end{itemize}
+
+\subsubsection{Acronyms}
+\begin{itemize}
+	\item \textsl{RASD}: \textbf{R}equirement \textbf{A}nalysis and \textbf{S}oftware \textbf{S}pecification
 	\item \textsl{DD} \textbf{D}esign \textbf{D}ocument
-	\item \textsl{Appointment}
-	\item \textsl{Route}
-	\item \textsl{Path}
-	\item \textsl{MA}
-	\item \textsl{GUI} \textbf{G}raphic \textbf{U}ser \textbf{I}nterface
-	\item \textsl{WebUI} \textbf{W}ew \textbf{U}ser \textbf{I}nterface
+	\item \textsl{GUI}: \textbf{G}raphic \textbf{U}ser \textbf{I}nterface
+	\item \textsl{WebUI}: \textbf{W}ew \textbf{U}ser \textbf{I}nterface
+	\item \textsl{API(s)}: Application Program Interface(s)
+	\item \textsl{DBMS}: \textbf{D}ata \textbf{B}ase \textbf{M}anagement \textbf{S}ystem
+\end{itemize}
+\subsubsection{Abbreviations}
+\begin{itemize}
+	\item \textsl{MA}: \textbf{M}obile \textbf{A}pplication
+	\item \textsl{WebApp}: Web Application
 	
 \end{itemize}
 
