--- a/DD/Files/architecture.tex
+++ b/DD/Files/architecture.tex
@@ -22,7 +22,7 @@ The high level structure of the system follows a three-tier architecture. The cl
 
 \subsection{Component view}
 
-\begin{figure}
+\begin{figure}[h]
 \centering
 \includegraphics[width=\textwidth]{{"Images/Architecture - Component View"}.png}
 \caption{\label{fig:metamodel2}Component diagram of the system}
