--- a/DD/Files/interface.tex
+++ b/DD/Files/interface.tex
@@ -3,7 +3,7 @@
 
 The following mock-ups give an idea of how the mobile user interface will be structured. The software used for realizing these mock-ups is Pencil, which doesn't produce very nice looking interfaces, but it is helpful for creating a structure that will be followed when realizing the real user interface.
 
-\begin{figure}
+\begin{figure}[h]
 \centering
 \includegraphics[scale=0.5]{{"Images/UI - Login"}.png}
 \caption{\label{fig:metamodel2}Login screen}
@@ -46,8 +46,6 @@ The following mock-ups give an idea of how the mobile user interface will be str
 \end{figure}
 
 \clearpage
-
-\newpage
 
 \subsection{UX diagram}
 
