--- a/DD/Files/introduction.tex
+++ b/DD/Files/introduction.tex
@@ -56,6 +56,10 @@ The system will offer his services to user through a Web GUI and a mobile applic
 \subsection{Revision History}
 
 %Revision History
+\begin{itemize}
+	\item 1.0 DD Release
+	\item 1.1 Fixes on Section 6 (Pag \pageref{sect:implementation})
+\end{itemize}
 
 \subsection{Reference Document}
 
